--- a/yamls/redmine.yml
+++ b/yamls/redmine.yml
@@ -37,10 +37,10 @@
 # CVE-2021-30164 4.0.8
 # CVE-2021-30163 4.0.8
 # CVE-2021-29274 4.1.2/4.0.8 https://redmine.org/issues/33846
-# CVE-2021-31863 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131
-# CVE-2021-31864 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131
-# CVE-2021-31865 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131
-# CVE-2021-31866 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131
+# CVE-2021-31863 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/repository/revisions/20962
+# CVE-2021-31864 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/repository/revisions/20970
+# CVE-2021-31865 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/repository/revisions/20946
+# CVE-2021-31866 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/repository/revisions/20854
 Redmine:
   1:
     location: ['/doc/CHANGELOG']
