--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3027,7 +3027,7 @@ WordPress plugin elementor-pro:
     location: ['/wp-content/plugins/elementor-pro/readme.txt']
     secure_version: '2.9.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2020/05/combined-attack-on-elementor-pro-and-ultimate-addons-for-elementor-puts-1-million-sites-at-risk/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-13126 https://www.wordfence.com/blog/2020/05/combined-attack-on-elementor-pro-and-ultimate-addons-for-elementor-puts-1-million-sites-at-risk/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin ultimate-elementor:
@@ -3035,7 +3035,7 @@ WordPress plugin ultimate-elementor:
     location: ['/wp-content/plugins/ultimate-elementor/readme.txt']
     secure_version: '1.24.2'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2020/05/combined-attack-on-elementor-pro-and-ultimate-addons-for-elementor-puts-1-million-sites-at-risk/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-13125 https://www.wordfence.com/blog/2020/05/combined-attack-on-elementor-pro-and-ultimate-addons-for-elementor-puts-1-million-sites-at-risk/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin siteorigin-panels:
