--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -913,12 +913,13 @@ WordPress plugin pondol-carousel:
     post_processing: ['php5.fcgi']
 # CVE-2016-10706 4.0.3 https://www.wordfence.com/blog/2016/05/jetpack-vulnerability/ https://jetpack.com/2016/05/27/jetpack-4-0-3-critical-security-update/
 # CVE-2016-10705 4.0.4 https://jetpack.com/2016/06/20/jetpack-4-0-4-bug-fixes/ https://wpvulndb.com/vulnerabilities/8517
+# 7.9.1 https://jetpack.com/2019/11/19/jetpack-7-9-1-maintenance-security/ https://www.bleepingcomputer.com/news/security/millions-of-sites-exposed-by-flaw-in-jetpack-wordpress-plugin/
 WordPress plugin jetpack:
   1:
     location: ['/wp-content/plugins/jetpack/readme.txt']
-    secure_version: '7.9.1'
+    secure_version: '9.8'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://jetpack.com/2019/11/19/jetpack-7-9-1-maintenance-security/ https://www.bleepingcomputer.com/news/security/millions-of-sites-exposed-by-flaw-in-jetpack-wordpress-plugin/'
+    cve: 'https://jetpack.com/2021/06/01/jetpack-9-8-engage-your-audience-with-wordpress-stories/ https://twitter.com/jetpack/status/1400495736136081415 https://www.bleepingcomputer.com/news/security/wordpress-force-installs-jetpack-security-update-on-5-million-sites/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-mobile-detector:
