--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3056,12 +3056,13 @@ WordPress plugin bbpress:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-13693 https://bbpress.org/blog/2020/05/bbpress-2-6-5-is-out/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# TODO 1.1.2 https://www.wordfence.com/blog/2020/05/high-severity-vulnerabilities-in-pagelayer-plugin-affect-over-200000-wordpress-sites/
 WordPress plugin pagelayer:
   1:
     location: ['/wp-content/plugins/pagelayer/readme.txt']
-    secure_version: '1.1.2'
+    secure_version: '1.3.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2020/05/high-severity-vulnerabilities-in-pagelayer-plugin-affect-over-200000-wordpress-sites/'  # TODO: CVE
+    cve: 'https://www.wordfence.com/blog/2020/12/reflected-xss-in-pagelayer-plugin-affects-over-200000-wordpress-sites/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested. (2021-06-06)
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # TODO 1.5.6 Unauthenticated Arbitrary File Upload leading to Remote Code Execution
