--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -171,18 +171,27 @@
 # CVE-2021-30158 1.35.2/1.31.13 https://gerrit.wikimedia.org/r/c/mediawiki/core/+/670546 https://phabricator.wikimedia.org/T277009
 # CVE-2021-30159 1.35.2/1.31.13 https://lists.wikimedia.org/pipermail/wikitech-l/2021-April/094418.html https://phabricator.wikimedia.org/T272386
 # CVE-2021-30458 1.35.2/1.31.13 https://phabricator.wikimedia.org/T279451
+# CVE-2021-35197 1.36.1/1.35.3/1.31.15 https://lists.wikimedia.org/hyperkitty/list/wikitech-l@lists.wikimedia.org/thread/YR3X4L2CPSEJVSY543AWEO65TD6APXHP/ lists.wikimedia.org didn't have this in archive yet 2021-06-26
+MediaWiki 1.36:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.36.1'
+    regexp: ['\$wgVersion.*?(?P<version>1\.36\.[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-35197'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.35:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.35.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.35\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-20270 https://nvd.nist.gov/vuln/detail/CVE-2021-27291 https://nvd.nist.gov/vuln/detail/CVE-2021-30152 https://nvd.nist.gov/vuln/detail/CVE-2021-30153 https://nvd.nist.gov/vuln/detail/CVE-2021-30154 https://nvd.nist.gov/vuln/detail/CVE-2021-30155 https://nvd.nist.gov/vuln/detail/CVE-2021-30156 https://nvd.nist.gov/vuln/detail/CVE-2021-30157 https://nvd.nist.gov/vuln/detail/CVE-2021-30158 https://nvd.nist.gov/vuln/detail/CVE-2021-30159 https://nvd.nist.gov/vuln/detail/CVE-2021-30458 https://lists.wikimedia.org/pipermail/wikitech-l/2021-April/094418.html'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-35197'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.34:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.34\.[0-9.]{1,})']
     cve: 'MediaWiki 1.34 is end of life. Please see: https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-November/000266.html'
     fingerprint: detect_general
@@ -190,7 +199,7 @@ MediaWiki 1.34:
 MediaWiki 1.33:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.33\.[0-9.]{1,})']
     cve: 'MediaWiki 1.33 is end of life. Please see: https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-June/000253.html'
     fingerprint: detect_general
@@ -198,7 +207,7 @@ MediaWiki 1.33:
 MediaWiki 1.32:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.32\.[0-9.]{1,})']
     cve: 'MediaWiki 1.32 is end of life. Please see: https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-January/000245.html'
     fingerprint: detect_general
@@ -208,13 +217,13 @@ MediaWiki 1.31:
     location: ['/includes/DefaultSettings.php']
     secure_version: '1.31.13'
     regexp: ['\$wgVersion.*?(?P<version>1\.31\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-20270 https://nvd.nist.gov/vuln/detail/CVE-2021-27291 https://nvd.nist.gov/vuln/detail/CVE-2021-30152 https://nvd.nist.gov/vuln/detail/CVE-2021-30153 https://nvd.nist.gov/vuln/detail/CVE-2021-30154 https://nvd.nist.gov/vuln/detail/CVE-2021-30155 https://nvd.nist.gov/vuln/detail/CVE-2021-30156 https://nvd.nist.gov/vuln/detail/CVE-2021-30157 https://nvd.nist.gov/vuln/detail/CVE-2021-30158 https://nvd.nist.gov/vuln/detail/CVE-2021-30159 https://nvd.nist.gov/vuln/detail/CVE-2021-30458 https://lists.wikimedia.org/pipermail/wikitech-l/2021-April/094418.html'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-35197'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.30:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.30\.[0-9.]{1,})']
     cve: 'MediaWiki 1.30 is end of life.'
     fingerprint: detect_general
@@ -222,7 +231,7 @@ MediaWiki 1.30:
 MediaWiki 1.29:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
     cve: 'MediaWiki 1.29 is end of life.'
     fingerprint: detect_general
@@ -230,7 +239,7 @@ MediaWiki 1.29:
 MediaWiki 1.28:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.28\.[0-9.]{1,})']
     cve: 'MediaWiki 1.28 is end of life.'
     fingerprint: detect_general
@@ -238,7 +247,7 @@ MediaWiki 1.28:
 MediaWiki 1.27:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
     cve: 'MediaWiki 1.27 is end of life.'
     fingerprint: detect_general
@@ -246,7 +255,7 @@ MediaWiki 1.27:
 MediaWiki 1.26:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.26\.[0-9.]{1,})']
     cve: 'MediaWiki 1.26 is end of life.'
     fingerprint: detect_general
@@ -254,7 +263,7 @@ MediaWiki 1.26:
 MediaWiki 1.25:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.25\.[0-9.]{1,})']
     cve: 'MediaWiki 1.25 is end of life.'
     fingerprint: detect_general
@@ -262,7 +271,7 @@ MediaWiki 1.25:
 MediaWiki 1.24:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.24\.[0-9.]{1,})']
     cve: 'MediaWiki 1.24 is end of life.'
     fingerprint: detect_general
@@ -270,7 +279,7 @@ MediaWiki 1.24:
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
     cve: 'MediaWiki 1.23 is end of life.'
     fingerprint: detect_general
@@ -278,7 +287,7 @@ MediaWiki 1.23:
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
     cve: 'MediaWiki 1.22 is end of life.'
     fingerprint: detect_general
@@ -286,7 +295,7 @@ MediaWiki 1.22:
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -294,7 +303,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20 is end of life.'
     fingerprint: detect_general
@@ -302,7 +311,7 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
     cve: 'MediaWiki 1.19 is end of life.'
     fingerprint: detect_general
@@ -310,7 +319,7 @@ MediaWiki 1.19:
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.2'
+    secure_version: '1.36.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18 is end of life.'
     fingerprint: detect_general
