--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1093,12 +1093,13 @@ WordPress plugin code-snippets:
 # CVE-2015-2069 2.2.11 http://seclists.org/fulldisclosure/2015/Feb/75
 # OVE-20160720-0006 2.6.3 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_woocommerce_using_image_metadata__exif_.html
 # OVE-20160719-0002 2.6.4 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_woocommerce_wordpress_plugin.html
+# CVE-2016-10112 2.6.9
 WordPress plugin woocommerce:
   1:
     location: ['/wp-content/plugins/woocommerce/readme.txt']
-    secure_version: '2.6.9'
+    secure_version: '5.5.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-10112'
+    cve: 'https://patchstack.com/database/vulnerability/woocommerce/wordpress-woocommerce-plugin-5-5-0-sql-injection-sqli-vulnerability'  # TODO: CVE missing
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin icegram:
