--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3024,7 +3024,7 @@ WordPress plugin learnpress:
     location: ['/wp-content/plugins/learnpress/readme.txt']
     secure_version: '3.2.6.9'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-11511 https://www.wordfence.com/blog/2020/04/high-severity-vulnerabilities-patched-in-learnpress/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-11510 https://nvd.nist.gov/vuln/detail/CVE-2020-11511 https://www.wordfence.com/blog/2020/04/high-severity-vulnerabilities-patched-in-learnpress/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin elementor-pro:
