--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -522,7 +522,7 @@ WordPress plugin cool-video-gallery:
     location: ['/wp-content/plugins/cool-video-gallery/readme.txt']
     secure_version: '2.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-7527 http://www.vapidlabs.com/advisory.php?v=158'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-7527 http://www.vapidlabs.com/advisory.php?v=158 https://seclists.org/bugtraq/2015/Dec/27'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2015-8351 1.5.4 https://www.htbridge.com/advisory/HTB23275
