--- a/yamls/redmine.yml
+++ b/yamls/redmine.yml
@@ -41,11 +41,14 @@
 # CVE-2021-31864 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/repository/revisions/20970
 # CVE-2021-31865 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/repository/revisions/20946
 # CVE-2021-31866 4.2.1/4.1.3/4.0.9 https://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/repository/revisions/20854
+# CVE-2021-22885 4.2.2/4.1.4 https://www.redmine.org/news/132
+# CVE-2021-22904 4.2.2/4.1.4 https://www.redmine.org/news/132
+# CVE-2021-37156 4.2.2 https://www.redmine.org/news/132
 Redmine:
   1:
     location: ['/doc/CHANGELOG']
-    secure_version: '4.2.1'
+    secure_version: '4.2.2'
     regexp: ['== [0-9]{4}-[0-9]{2}-[0.9]{2}.*?v(?P<version>[0-9.]+)']
-    cve: 'ttps://www.redmine.org/news/131 https://www.redmine.org/projects/redmine/wiki/Security_Advisories https://nvd.nist.gov/vuln/detail/CVE-2021-31863 https://nvd.nist.gov/vuln/detail/CVE-2021-31864 https://nvd.nist.gov/vuln/detail/CVE-2021-31865 https://nvd.nist.gov/vuln/detail/CVE-2021-31866'
+    cve: 'https://www.redmine.org/news/132 https://www.redmine.org/projects/redmine/wiki/Security_Advisories https://nvd.nist.gov/vuln/detail/CVE-2021-22885 https://nvd.nist.gov/vuln/detail/CVE-2021-22904 https://nvd.nist.gov/vuln/detail/CVE-2021-37156'
     fingerprint: detect_redmine
     post_processing: ['php5.fcgi']
