--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1403,14 +1403,12 @@ WordPress plugin candidate-application-form:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-1000005 http://www.vapidlabs.com/advisory.php?v=142'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-# CVE-2015-1000000 1.100 http://www.vapidlabs.com/advisory.php?v=138
-# CVE-2016-1000156 N/A http://www.vapidlabs.com/advisory.php?v=175 https://www.openwall.com/lists/oss-security/2016/11/08/4
 WordPress plugin mailcwp:
   1:
     location: ['/wp-content/plugins/mailcwp/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000156 http://www.vapidlabs.com/advisory.php?v=175'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-1000000 http://www.vapid.dhs.org/advisory.php?v=138 https://nvd.nist.gov/vuln/detail/CVE-2016-1000156 http://www.vapidlabs.com/advisory.php?v=175 https://www.openwall.com/lists/oss-security/2016/11/08/4'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin fast-image-adder:
