--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -402,12 +402,15 @@ WordPress plugin wp-limit-login-attempts:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-6829'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2015-7668 1.3.0
+# CVE-2015-7669 1.3.0
 WordPress plugin easy2map:
   1:
     location: ['/wp-content/plugins/easy2map/readme.txt']
-    secure_version: '1.3.0'
+    secure_version: '1.25'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-7668 https://nvd.nist.gov/vuln/detail/CVE-2015-7669'
+    # https://lists.openwall.net/bugtraq/2015/07/06/4
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-4614 https://nvd.nist.gov/vuln/detail/CVE-2015-4616 https://www.openwall.com/lists/oss-security/2015/07/02/6 http://www.vapid.dhs.org/advisory.php?v=131'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin payment-form-for-paypal-pro:
