--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3658,6 +3658,6 @@ WordPress plugin wp-fusion-lite:
     location: ['/wp-content/plugins/wp-fusion-lite/readme.txt']
     secure_version: '3.37.30'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34661 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-34661'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34660 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-34660 https://nvd.nist.gov/vuln/detail/CVE-2021-34661 https://www.wordfence.com/vulnerability-advisories/#CVE-2021-34661'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
