--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3459,12 +3459,16 @@ WordPress plugin envira-gallery-lite:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-35581 https://nvd.nist.gov/vuln/detail/CVE-2020-35582 https://lists.openwall.net/full-disclosure/2021/01/13/3'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2021-34621 3.1.4 https://www.wordfence.com/blog/2021/06/easily-exploitable-critical-vulnerabilities-patched-in-profilepress-plugin/
+# CVE-2021-34622 3.1.4 https://www.wordfence.com/blog/2021/06/easily-exploitable-critical-vulnerabilities-patched-in-profilepress-plugin/
+# CVE-2021-34623 3.1.4 https://www.wordfence.com/blog/2021/06/easily-exploitable-critical-vulnerabilities-patched-in-profilepress-plugin/
+# CVE-2021-34624 3.1.4 https://www.wordfence.com/blog/2021/06/easily-exploitable-critical-vulnerabilities-patched-in-profilepress-plugin/
 WordPress plugin wp-user-avatar:
   1:
     location: ['/wp-content/plugins/wp-user-avatar/readme.txt']
-    secure_version: '3.1.4'
+    secure_version: '3.1.11'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34621 https://nvd.nist.gov/vuln/detail/CVE-2021-34622 https://nvd.nist.gov/vuln/detail/CVE-2021-34623 https://nvd.nist.gov/vuln/detail/CVE-2021-34624 https://www.wordfence.com/blog/2021/06/easily-exploitable-critical-vulnerabilities-patched-in-profilepress-plugin/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24522 https://plugins.trac.wordpress.org/changeset/2561271/wp-user-avatar'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-upload-restriction:
