--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -99,7 +99,7 @@
 # CVE-2015-8626 1.26.1/1.25.4/1.24.5/1.23.12 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-December/000186.html
 # CVE-2015-8627 1.26.1/1.25.4/1.24.5/1.23.12 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-December/000186.html
 # CVE-2015-8628 1.26.1/1.25.4/1.24.5/1.23.12 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-December/000186.html
-# CVE-2016-XXXX 1.26.3/1.25.6/1.23.14 https://lists.wikimedia.org/pipermail/mediawiki-announce/2016-May/000188.html
+# CVE-2016-XXXX 1.26.3/1.25.6/1.23.14 https://lists.wikimedia.org/pipermail/mediawiki-announce/2016-May/000188.html https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/message/SSGEZXHNBL6JWUZLADQ5XYPACYB7WQGA/
 # CVE-2016-XXXX 1.27.1/1.26.4/1.23.15 https://lists.wikimedia.org/pipermail/mediawiki-announce/2016-August/000195.html
 # CVE-2017-0361 1.28.1/1.27.2/1.23.16 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000207.html
 # CVE-2017-0362 1.28.1/1.27.2/1.23.16 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000207.html
@@ -141,6 +141,7 @@
 # CVE-2019-19709 TODO https://phabricator.wikimedia.org/T239466 https://gerrit.wikimedia.org/r/q/Ie54f366986056c876eade0fcad6c41f70b8b8de8
 # TODO 1.33.12/1.32.6/1.31.6 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000243.html
 # TODO 1.34.0/1.33.3/1.32.6/1.30.6 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000241.html
+# CVE-2020-10959 1.34.1/1.33.3/1.31.7 https://phabricator.wikimedia.org/T232932 https://lists.wikimedia.org/pipermail/wikitech-l/2020-March/093243.html
 # CVE-2020-10960 1.34.1/1.33.3/1.31.7 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-March/000247.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-March/093243.html
 # CVE-2020-26121 1.35.0/1.34.3/1.31.9 https://gerrit.wikimedia.org/r/q/Ib852a96afc4dca10516d0510e69c10f9892b351b
 # CVE-2020-25689 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html https://phabricator.wikimedia.org/T260485
