--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3726,12 +3726,11 @@ WordPress plugin wp-concours:
     post_processing: ['php5.fcgi']
 # N/A 2.5.4 https://lists.openwall.net/full-disclosure/2018/01/10/17 TODO: CVE requested 2021-08-15
 # CVE-2020-7108 3.1.2 http://packetstormsecurity.com/files/156275/LearnDash-WordPress-LMS-3.1.2-Cross-Site-Scripting.html
-# CVE-2020-6009 3.1.6 https://learndash.releasenotes.io/release/YBfaq-version-316
 WordPress plugin learndash:
   1:
     location: ['/wp-content/plugins/learndash/readme.txt']
     secure_version: '3.1.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-6009'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-6009 https://learndash.releasenotes.io/release/YBfaq-version-316'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
