--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -505,12 +505,20 @@ WordPress plugin wppageflip:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2012-6652'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# TODO: No CVE? 1.3.38 https://packetstormsecurity.com/files/128473/
+# TODO: No CVE? 1.4.36 https://g0blin.co.uk/g0blin-00030/
+# CVE-2015-4109 1.5.16 https://packetstormsecurity.com/files/132181/
+# CVE-2015-9402 1.5.59 http://seclists.org/bugtraq/2015/Nov/93
+# CVE-2015-9392 1.5.63 https://lists.openwall.net/bugtraq/2015/12/02/12
+# CVE-2015-9393 1.5.63 https://lists.openwall.net/bugtraq/2015/12/02/12
+# CVE-2015-9394 1.5.63 https://lists.openwall.net/bugtraq/2015/12/02/12
+# CVE-2015-9395 1.5.63 https://lists.openwall.net/bugtraq/2015/12/02/11 https://lists.openwall.net/bugtraq/2015/12/10/3
 WordPress plugin users-ultra:
   1:
     location: ['/wp-content/plugins/users-ultra/readme.txt']
-    secure_version: '1.5.59'
+    secure_version: '1.5.63'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2015/Nov/93'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9392 https://nvd.nist.gov/vuln/detail/CVE-2015-9393 https://nvd.nist.gov/vuln/detail/CVE-2015-9394 https://nvd.nist.gov/vuln/detail/CVE-2015-9395'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin cm-download-manager:
