--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -274,18 +274,20 @@
 # CVE-2021-29450 5.7.1 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-pmmh-2f36-wvhq https://wordpress.org/news/2021/04/wordpress-5-7-1-security-and-maintenance-release/
 # CVE-2018-19296 5.7.2 https://wordpress.org/news/2021/05/wordpress-5-7-2-security-release/
 # CVE-2020-36326 5.7.2 https://wordpress.org/news/2021/05/wordpress-5-7-2-security-release/
+# CVE-2021-39201 5.8 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-wh69-25hr-h94v
+# CVE-2021-39200 5.8.1 https://wordpress.org/news/2021/09/wordpress-5-8-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-m9hc-7v5q-x8q5
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '5.7.2'
+    secure_version: '5.8.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2021/05/wordpress-5-7-2-security-release/'
+    cve: 'https://wordpress.org/news/2021/09/wordpress-5-8-1-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2021-39200'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '5.7.2'
+    secure_version: '5.8.1'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2021/05/wordpress-5-7-2-security-release/'
+    cve: 'https://wordpress.org/news/2021/09/wordpress-5-8-1-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2021-39200'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
