--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -92,6 +92,7 @@
 # CVE-2019-9057 TODO
 # CVE-2019-9058 TODO
 # CVE-2019-9059 TODO
+# CVE-2019-9060 2.2.10 https://forum.cmsmadesimple.org/viewtopic.php?f=1&t=80285 https://newsletter.cmsmadesimple.org/w/89247Qog4jCRCuRinvhsofwg https://www.cmsmadesimple.org/2019/03/Announcing-CMS-Made-Simple-v2.2.10-Spuzzum
 # CVE-2019-9061 TODO
 # CVE-2019-9692 TODO
 # CVE-2019-9693 TODO
@@ -108,10 +109,24 @@
 # CVE-2020-14926 TODO http://dev.cmsmadesimple.org/bug/view/12324 affected 2.2.14 XSS in "Search" via "Module Manager" feature. reported 2020-06-18
 # CVE-2020-17462 TODO https://www.exploit-db.com/exploits/48742 related to issue CVE-2017-16798
 # CVE-2020-24860 TODO http://packetstormsecurity.com/files/159434/CMS-Made-Simple-2.2.14-Cross-Site-Scripting.html https://www.exploit-db.com/exploits/48851
-# CVE-2020-20138 TODO
+# CVE-2020-20138 TODO https://packetstormsecurity.com/files/160604/Flexmonster-Pivot-Table-And-Charts-2.7.17-Cross-Site-Scripting.html
 # CVE-2021-28935 TODO http://dev.cmsmadesimple.org/bug/view/12432
 # TODO https://github.com/beerpwn/CVE/blob/master/cms_made_simple_2021/sqli_order_by/CMS-MS-SQLi-report.md https://lists.openwall.net/full-disclosure/2021/03/19/3 This is SQL-injection in 2.2.15 (latest) and vendor has said they won't fix it
-# TODO https://github.com/beerpwn/CVE/blob/master/cms_made_simple_2021/file_upload_RCE/File_upload_to_RCE.md https://lists.openwall.net/full-disclosure/2021/03/19/4 This is RCE in 2.2.15 (latest) and vendor has said they won't fix it
+# TODO https://github.com/beerpwn/CVE/blob/master/cms_made_simple_2021/file_upload_RCE/File_upload_to_RCE.md https://lists.openwall.net/full-disclosure/2021/03/19/4 This is RCE in 2.2.15 (latest) and vendor has said they won't fix it. Needs admin privileges according to founder of vulnerability
+# CVE-2020-27377 TODO
+# CVE-2020-36408 TODO
+# CVE-2020-36409 TODO
+# CVE-2020-36410 TODO
+# CVE-2020-36411 TODO
+# CVE-2020-36412 TODO
+# CVE-2020-36413 TODO
+# CVE-2020-36414 TODO
+# CVE-2020-36415 TODO
+# CVE-2020-36416 TODO
+# CVE-2020-23239 TODO
+# CVE-2020-23240 TODO
+# CVE-2020-23241 TODO
+# CVE-2020-22732 TODO
 CMSMS:
   1:
     location: ['/version.php']
