--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3142,7 +3142,7 @@ WordPress plugin wp-file-manager:
     location: ['/wp-content/plugins/wp-file-manager/readme.txt']
     secure_version: '6.9'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2020/09/700000-wordpress-users-affected-by-zero-day-vulnerability-in-file-manager-plugin/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-25213 https://www.wordfence.com/blog/2020/09/700000-wordpress-users-affected-by-zero-day-vulnerability-in-file-manager-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin woo-discount-rules:
